--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -40,6 +40,14 @@ entries:
       url: /reports.html
       output: web, pdf
 
+  - title: Videos
+    output: web
+    folderitems:
+    
+    - title: Videos
+      url: /videos.html
+      output: web
+
   - title: Blog
     output: web
     folderitems:
