added known issues

--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -40,6 +40,10 @@ entries:
       url: /reports.html
       output: web, pdf
 
+    - title: Known Issues
+      url: /known_issues.html
+      output: web, pdf
+
   - title: Videos
     output: web
     folderitems:
