--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -32,6 +32,10 @@ entries:
       url: /installation.html
       output: web, pdf
 
+    - title: Building with Spack
+      url: /installation_spack.html
+      output: web, pdf
+
     - title: How to Use
       url: /how-to-use.html
       output: web, pdf
