--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -62,6 +62,11 @@ entries:
       output: web, pdf
       type: homepage
 
+    - title: Exponent Usage
+      url: /exponent-usage.html
+      output: web, pdf
+      type: homepage
+
   - title: Videos
     output: web
     folderitems:
