--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -67,6 +67,11 @@ entries:
       output: web, pdf
       type: homepage
 
+    - title: Binary Instrumentation
+      url: /nvbit_tool.html
+      output: web, pdf
+      type: homepage
+
   - title: Videos
     output: web
     folderitems:
